<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SalvationLamb</string>
    <string name="Product_name">SalvationLamb</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Blocked_account">Your account is blocked\n please contact administrator</string>
    <string name="Deleted_account">Your account is removed\n please contact administrator</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="react1">Praise the LORD</string>
    <string name="react2">Praise the LORD, O my soul</string>
    <string name="react3">Ave Maria</string>
    <string name="react4">Amen</string>
    <string name="react5">Hallelujah</string>
    <string name="react6">Hosanna</string>
    <string name="react7">I Bless the name of the LORD</string>
    <string name="react8">LORD, please forgive me</string>
    <string name="react9">LORD, please redeem me</string>
    <string name="react10">LORD, please heal me</string>
    <string name="react11">LORD, please strengthen me</string>
    <string name="react12">LORD, please save me</string>
    <string name="react13">LORD, please comfort me</string>
    <string name="react14">LORD, have mercy on me</string>
    <string name="make_me_warrior">
        If you want to become a warrior, you must strictly follow our Terms and Conditions as you acknowledged earlier
        during the Signup process.\n\n
        1. INTRODUCTION\n
        A Warrior in “Salvation Army of Jesus Christ” community, is given the privilege to do the post on this
        “SalvationLamb” platform. The privilege include (text/image) post. The warrior has the whole responsibility for
        their post. Once post is done, it cannot be edit/delete. If you wish to edit/delete, you must contact the admin
        to do such thing. So, we strictly urge the warrior should be keen and careful about the post. Each post is
        monitored and each post undergo the verification/approval process. The approved post only visible to the
        platform for the other users. If the post violates our rules, then it will be immediately removed. Even it may
        cause to terminate your account without any prior notice.
        \n
        If you do not read our Terms and Conditions, we strictly advice to read it fully and then decide to become a
        warrior here. As we mentioned in our Terms and Conditions, the post should not be irrelevant to the
        “Christianity” content. It should not oppose the “Word of GOD” at any cause.
        \n\n
        2. QUALIFICATION\n
        The first and foremost quality to become a warrior is, you must have the holy gift of “Tongues”. It is mandatory
        for a warrior. If you don’t have this holy gift of “Tongues”, then it is not advisable to become a warrior.
        \n\n


        3. VERIFICATION\n
        If you want to become a warrior, you are strictly undergoing our verification including your (Account
        information, Contact information including email id/mobile number, Location, Nationality, Mother Tongue and
        Church details). If needed we may also contact your over the phone or email. If you wish to co-operate all the
        verification process taken care from our side, then it would be very helpful to us to know/understand about you
        in a much better way.
        \n\n
        4. WHEN TO CHANGE YOU A WARRIOR\n
        If you are qualified with our minimum requirements and your verification process is satisfied to us, then we
        will promote you as a warrior by granting the privilege to do the post (text/image post) on our platform. We
        will also send you a welcome note about you to become as a warrior during your first login after becoming as a
        warrior.

    </string>
    <string name="notification_channel_id" tools:ignore="ExtraTranslation">VEHA</string>
</resources>