<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/react1"
          android:title="@string/react1"/>
    <item android:id="@+id/react2"
          android:title="@string/react2"/>
    <item android:id="@+id/react3"
          android:title="@string/react3"/>
    <item android:id="@+id/react4"
          android:title="@string/react4"/>
    <item android:id="@+id/react5"
          android:title="@string/react5"/>
    <item android:id="@+id/react6"
          android:title="@string/react6"/>
    <item android:id="@+id/react7"
          android:title="@string/react7"/>
    <item android:id="@+id/react8"
          android:title="@string/react8"/>
    <item android:id="@+id/react9"
          android:title="@string/react9"/>
    <item android:id="@+id/react10"
          android:title="@string/react10"/>
    <item android:id="@+id/react11"
          android:title="@string/react11"/>
    <item android:id="@+id/react12"
          android:title="@string/react12"/>
    <item android:id="@+id/react13"
          android:title="@string/react13"/>
    <item android:id="@+id/react14"
          android:title="@string/react14"/>
    <!--<item android:id="@+id/react15"
          android:title="@string/react15"/>-->
</menu>